--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.LocalLoop"
         tools:targetApi="31">
         <activity
-            android:name=".registration"
+            android:name=".Dashboard"
+            android:exported="false" />
+        <activity
+            android:name=".Registration"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
