--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.LocalLoop"
         tools:targetApi="31">
         <activity
-            android:name=".Dashboard"
+            android:name=".ui.Dashboard"
             android:exported="false" />
         <activity
-            android:name=".Registration"
+            android:name=".data.model.Registration"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
