Achived login, added a welcome page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity
             android:name=".ui.auth.RegistrationActivity"
             android:exported="true" />
+        <activity android:name=".ui.user.Welcome" />
 
     </application>
 
