implemented edit and delete categories

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             android:name=".ui.auth.RegistrationActivity"
             android:exported="true" />
         <activity android:name=".ui.auth.AddCategoryActivity" android:exported="false"/>
+        <activity android:name=".ui.auth.EditCategoryActivity" android:exported="true" />
 
 
     </application>
