--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,45 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.example.localloop">
+
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
+        android:label="LocalLoop"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LocalLoop"
-        tools:targetApi="33">
+        android:theme="@style/Theme.LocalLoop">
+
+        <!-- Main activity with android:exported=true -->
         <activity
-            android:name=".ui.auth.ParticipantDashboard"
-            android:exported="false" />
-        <activity
-            android:name=".ui.auth.AdminDashboard"
-            android:exported="false" />
-        <activity
-            android:name=".ui.auth.OrganizerDashboard"
-            android:exported="false" /> <!-- Launches this screen first -->
-        <activity
-            android:name=".ui.auth.LoginActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> <!-- Registration activity -->
-        <activity
-            android:name=".ui.auth.RegistrationActivity"
-            android:exported="true" />
-        <activity android:name=".ui.auth.AddCategoryActivity" android:exported="false"/>
-        <activity android:name=".ui.auth.EditCategoryActivity" android:exported="true" />
-        <activity android:name=".ui.auth.AddEventActivity" android:exported="false"/>
-        <activity android:name=".ui.auth.EditEventActivity" android:exported="false"/>
-
-
-
+        </activity>
 
     </application>
 
