--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             </intent-filter>
         </activity>
 
+
+        <activity android:name=".ui.LoginActivity" />
+
     </application>
 
 </manifest>
