--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
 
 
         <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".ui.AdminActivity" />
+        <activity android:name=".ui.OrganizerActivity" />
+        <activity android:name=".ui.ParticipantActivity" />
 
     </application>
 
